<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.mainfragments.DietFragment"
    android:padding="20dp"
    android:background="@drawable/gradient_background">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/custom_font"
            android:text="@string/diet"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="50sp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:id="@+id/DietMainBackground"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="1">
                <TextView
                    android:id="@+id/LoveDishNotification"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/today_dish"
                    android:textSize="25sp"
                    android:textColor="@color/white"
                    android:fontFamily="@font/custom_font"/>
                <TextView
                    android:id="@+id/LoveDishNotificationBreakfast"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/breakfast"
                    android:textSize="25sp"
                    android:textColor="@color/white"
                    android:fontFamily="@font/custom_font"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rvDishDetailTodayBreakfast"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
                <TextView
                    android:id="@+id/LoveDishNotificationLunch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lunch"
                    android:textSize="25sp"
                    android:textColor="@color/white"
                    android:fontFamily="@font/custom_font"
                    android:layout_marginTop="10dp"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rvDishDetailTodayLunch"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
                <TextView
                    android:id="@+id/LoveDishNotificationDinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dinner"
                    android:textSize="25sp"
                    android:textColor="@color/white"
                    android:fontFamily="@font/custom_font"
                    android:layout_marginTop="10dp"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rvDishDetailTodayDinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
            </LinearLayout>
            <Button
                android:id="@+id/DrinkWaterButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:background = "@drawable/button_design"
                android:text="@string/drink_water"
                android:textColor="@color/black"
                android:textAllCaps="false"
                android:textSize="30sp"
                android:fontFamily="@font/custom_font"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="10dp"
                />
            <Button
                android:id="@+id/RecommendDietButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:background = "@drawable/button_design"
                android:text="@string/recommend"
                android:textColor="@color/black"
                android:textAllCaps="false"
                android:textSize="30sp"
                android:fontFamily="@font/custom_font"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="10dp"
                />
            <Button
                android:id="@+id/ResetDietButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:background = "@drawable/button_design"
                android:text="Reset"
                android:textColor="@color/black"
                android:textAllCaps="false"
                android:textSize="30sp"
                android:fontFamily="@font/custom_font"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="10dp"
                />
        </LinearLayout>
    </LinearLayout>
</ScrollView>